templates/deployment.yaml
# create a separate namespace for each project
---
apiVersion: v1
kind: Namespace
metadata:
  name: myphp
# create an application deployment 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: myphp
  name: my-php-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: php
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: php
    spec:
      containers:
      - image: 258001262640.dkr.ecr.ap-southeast-1.amazonaws.com/eks-demo:phpapp2
        imagePullPolicy: Always
        name: my-php-deployment
        ports:
        - containerPort: 80
